example_2.log
In file included from /home/grzegorz/Documents/lzss/tests/koda/coders/lzss/lzss.test.cpp:3:
/home/grzegorz/Documents/lzss/include/koda/tests/tests.hpp:80:9: error: non-constant condition for static assertion
   80 |     }() == 0);
      |         ^
/home/grzegorz/Documents/lzss/tests/koda/coders/lzss/lzss.test.cpp:78:1: note: in expansion of macro ‘EndConstexprTest’
   78 | EndConstexprTest;
      | ^~~~~~~~~~~~~~~~
In file included from /home/grzegorz/Documents/lzss/include/koda/collections/search_binary_tree.hpp:251,
                 from /home/grzegorz/Documents/lzss/include/koda/coders/lzss/lzss_decoder.hpp:7,
                 from /home/grzegorz/Documents/lzss/tests/koda/coders/lzss/lzss.test.cpp:1:
/home/grzegorz/Documents/lzss/tests/koda/coders/lzss/lzss.test.cpp:78:1:   in ‘constexpr’ expansion of ‘<lambda()> static()’
/home/grzegorz/Documents/lzss/tests/koda/coders/lzss/lzss.test.cpp:66:12:   in ‘constexpr’ expansion of ‘((koda::EncoderInterface<char, koda::LzssEncoder<char> >*)(& encoder))->koda::EncoderInterface<char, koda::LzssEncoder<char> >::operator()<std::__cxx11::basic_string<char>&, koda::details::BitView<koda::ranges::InsertFromBackView<std::vector<unsigned char> >, koda::LittleEndianOutputBitIter> >(sequence, std::ranges::views::__adaptor::operator|<const koda::details::BitViewAdaptorClosure<koda::ranges::LittleEndianOutputView>&, koda::ranges::InsertFromBackView<std::vector<unsigned char> > >(std::ranges::views::__adaptor::operator|<const koda::views::InsertFromBackAdaptorClosure&, std::vector<unsigned char>&>(encoded, koda::views::InsertFromBack), koda::views::LittleEndianOutput))’
/home/grzegorz/Documents/lzss/include/koda/coders/coder.hpp:83:26:   in ‘constexpr’ expansion of ‘(&((koda::EncoderInterface<char, koda::LzssEncoder<char> >*)this)->koda::EncoderInterface<char, koda::LzssEncoder<char> >::self())->koda::LzssEncoder<char>::Encode<std::__cxx11::basic_string<char>&, koda::details::BitView<koda::ranges::InsertFromBackView<std::vector<unsigned char> >, koda::LittleEndianOutputBitIter> >((* & std::forward<__cxx11::basic_string<char>&>((* & input))), (* & std::forward<koda::details::BitView<koda::ranges::InsertFromBackView<vector<unsigned char> >, koda::LittleEndianOutputBitIter>&&>((* & output))))’
/home/grzegorz/Documents/lzss/include/koda/coders/lzss/lzss_encoder.tpp:59:26:   in ‘constexpr’ expansion of ‘((koda::LzssEncoder<char>*)this)->koda::LzssEncoder<char>::EncodeData<std::ranges::drop_view<std::ranges::ref_view<std::__cxx11::basic_string<char> > >, koda::details::BitView<koda::ranges::InsertFromBackView<std::vector<unsigned char> >, koda::LittleEndianOutputBitIter>&>(((koda::LzssEncoder<char>*)this)->koda::LzssEncoder<char>::InitializeBuffer<std::__cxx11::basic_string<char>&>((* & input)), (* & output))’
/home/grzegorz/Documents/lzss/include/koda/coders/lzss/lzss_encoder.tpp:102:38:   in ‘constexpr’ expansion of ‘((koda::LzssEncoder<char>*)this)->koda::LzssEncoder<char>::PeformEncodigStep<std::ranges::subrange<koda::LittleEndianOutputBitIter<koda::BackInserterIterator<std::vector<unsigned char> > >, std::default_sentinel_t, std::ranges::subrange_kind::unsized> >((* & dict), look_ahead, (* & std::move<ranges::subrange<koda::LittleEndianOutputBitIter<koda::BackInserterIterator<vector<unsigned char> > >, default_sentinel_t, std::ranges::subrange_kind::unsized>&>(out_range)))’
/home/grzegorz/Documents/lzss/include/koda/coders/lzss/lzss_encoder.tpp:153:40:   in ‘constexpr’ expansion of ‘((koda::LzssEncoder<char>*)this)->koda::LzssEncoder<char>::TryToRemoveStringFromSearchTree((* & dict))’
/home/grzegorz/Documents/lzss/include/koda/coders/lzss/lzss_encoder.tpp:169:34:   in ‘constexpr’ expansion of ‘((koda::LzssEncoder<char>*)this)->koda::LzssEncoder<char>::search_tree_.koda::SearchBinaryTree<char, std::allocator<char> >::RemoveString((& dict)->koda::FusedDictionaryAndBuffer<char, std::allocator<char> >::get_oldest_dictionary_full_match())’
/home/grzegorz/Documents/lzss/include/koda/collections/search_binary_tree.tpp:58:24:   in ‘constexpr’ expansion of ‘((koda::SearchBinaryTree<char, std::allocator<char> >*)this)->koda::SearchBinaryTree<char, std::allocator<char> >::CheckInvariants()’
/home/grzegorz/Documents/lzss/include/koda/collections/search_binary_tree.tpp:786:30:   in ‘constexpr’ expansion of ‘((const koda::SearchBinaryTree<char, std::allocator<char> >*)this)->koda::SearchBinaryTree<char, std::allocator<char> >::ValidateRedNodeConstraint()’
/home/grzegorz/Documents/lzss/include/koda/collections/search_binary_tree.tpp:804:17: error: expression ‘<throw-expression>’ is not a constant expression
  804 |                 throw std::logic_error{"Red node invariant broken!"};
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
